--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-jsonschema-materialui-forms",
-  "version": "0.0.41",
+  "version": "0.0.42",
   "description": "A simple React component capable of building HTML forms out of a JSON schema based on the Material UI React library. Special credit goes to initial author Nicolas Perriault.",
   "scripts": {
     "build:readme": "toctoc README.md -w",
@@ -43,21 +43,21 @@
     "react-dom": ">=16.8.6"
   },
   "dependencies": {
-    "@date-io/date-fns": "0.0.2",
-    "@date-io/moment": "^1.1.0",
-    "@material-ui/core": "^3.5.1",
-    "@material-ui/icons": "^3.0.1",
+    "@date-io/date-fns": "^1.3.6",
+    "@date-io/moment": "^1.3.6",
+    "@material-ui/core": "^4.0.1",
+    "@material-ui/icons": "^4.0.1",
+    "@material-ui/pickers": "^3.0.0",
     "ajv": "^6.7.0",
     "babel-runtime": "^6.26.0",
     "core-js": "^2.5.7",
-    "date-fns": "^2.0.0-alpha.25",
+    "date-fns": "^1.30.1",
     "lodash.topath": "^4.5.2",
-    "material-ui-pickers": "^2.2.4",
     "moment": "^2.24.0",
     "prop-types": "^15.5.8",
-    "react-html-parser": "^2.0.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-html-parser": "^2.0.2"
   },
   "devDependencies": {
     "atob": "^2.0.3",
