--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "babel-loader": "^8.0.6",
     "chai": "^3.3.0",
     "codemirror": "^5.30.0",
+    "create-react-ref": "^0.1.0",
     "cross-env": "^2.0.1",
     "css-loader": "^0.23.1",
     "eslint": "^4.9.0",
@@ -92,6 +93,7 @@
     "react-addons-test-utils": "^15.3.2",
     "react-codemirror2": "^4.1.0",
     "react-dom": "^15.3.2",
+    "react-portal": "^4.2.0",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.3.3",
