--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,31 +20,64 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
-    - run: npm run build
-    - run: npm test
     - run: npm run lint
     - run: npm run cs-check
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.ref == 'refs/heads/master'
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js 14.x
-      uses: actions/setup-node@v2.1.2
-      with:
-        node-version: 14.x
-    - run: npm ci
-    - run: npm run build
-    - name: Deploy playground to GitHub Pages
-      uses: crazy-max/ghaction-github-pages@v2.2.0
-      with:
-        keep_history: true
-        target-branch: gh-pages
-        build_dir: packages/playground/build
+    
+    - name: Build with Netlify badge
+      if: github.ref != 'refs/heads/master'
+      run: npm run build
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SHOW_NETLIFY_BADGE: true
+    - name: Build
+      if: github.ref == 'refs/heads/master'
+      run: npm run build
+    
+    - if: matrix.node-version == '14.x'
+      uses: actions/upload-artifact@v2
+      with:
+        name: dist
+        path: packages/playground/build
+    - run: npm test
+    
+  deploy_preview:
+    runs-on: ubuntu-latest
+    if: github.ref != 'refs/heads/master'
+    name: "Deploy preview (https://deploy-preview-${{ github.event.pull_request.number }}--rjsf.netlify.app/)"
+    needs: [build]
+    steps:
+      - name: Download built files
+        uses: actions/download-artifact@v2
+        with:
+          name: dist
+          path: dist
+      - name: "Deploy to Netlify (https://deploy-preview-${{ github.event.pull_request.number }}--rjsf.netlify.app/)"
+        uses: netlify/actions/cli@master
+        with:
+          args: deploy --dir=dist --alias="deploy-preview-${PR_NUMBER}"
+        env:
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+  
+  deploy_playground:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
+    name: Deploy playground to GitHub Pages
+    needs: [build]
+    steps:
+      - name: Download built files
+        uses: actions/download-artifact@v2
+        with:
+          name: dist
+          path: dist
+      - name: Deploy playground
+        uses: crazy-max/ghaction-github-pages@v2.2.0
+        with:
+          keep_history: true
+          target-branch: gh-pages
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
   docs:
     runs-on: ubuntu-latest
